--- a/src/main/resources/templates/confirmsong.html
+++ b/src/main/resources/templates/confirmsong.html
@@ -9,7 +9,7 @@
     The artist name is [[${song.artist}]]. <br />
     The album name is [[${song.album}]]. <br />
     The rating name is [[${song.rating}]]. <br />
-    The year that is came out was [[${song.rating}]].
+    The year that is came out was [[${song.year}]].
 </p>
 </body>
 </html>
